# 7ir

./: .gitignore  CMakeLists.txt  Makefile  README  features.txt  go
src/: Note.cpp  Note.h  Phone.cpp  Phone.h  Song.cpp  Song.h  Sound.cpp  Sound.h  Speech.cpp  Speech.h  Voice.cpp  Voice.h  VoiceLibrary.cpp  VoiceLibrary.h  conversionTable.h  fileio.cpp  fileio.h  main.cpp  transpose.cpp
tools/: wavify.sh
utils/: fix-ust.sh  format.sh  make-mp3.sh  play.sh  reqs  unzip-jis.sh
